test/instance-checks-2.ktn
define example<a, b> (a -> b): ->x; x
